--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
+    "prismjs": "^1.17.1",
     "react": "^16.10.2",
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.10.2",
